--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -1,21 +1,51 @@
 <?xml version="1.0" encoding="utf-8" ?>
+
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="iNutri.HomePage">
 
-
-    <VerticalStackLayout BackgroundColor="LightBlue">
-
+    <Grid RowSpacing="25"
+              Padding="25">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="0.4*"/>
+            <RowDefinition Height="0.4*"/>
+        </Grid.RowDefinitions>
+        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
         <Label Text="Home"
-               TextColor="Black"
+               Grid.Row="0"
                FontSize="Large"
+               FontAttributes="Bold"
                HorizontalOptions="Center"/>
 
-        <Label 
-            Text="Welcome Home"
-            TextColor="Black"
-            VerticalOptions="Center"
-            FontSize="Large"
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+        <ImageButton Source="nutritionguide.png" 
+                     Padding="25"
+                    Clicked="OnImageButton1Clicked"
+                    Grid.Row="1"
+                     HorizontalOptions="Center"/>
+        
+        <Label Text="Nutrition Guide"
+               FontSize="Medium"
+               FontAttributes="Bold"
+               Grid.Row="1"
+               VerticalOptions="End"
+               HorizontalOptions="Center"/>
+
+        <ImageButton Source="consultation.png"
+                     Padding="25"
+                    Clicked="OnImageButton2Clicked"
+                    Grid.Row="2"
+                     HorizontalOptions="Center"/>
+
+        <Label Text="Consultation"
+               FontSize="Medium"
+               FontAttributes="Bold"
+               Grid.Row="2"
+               VerticalOptions="End"
+               HorizontalOptions="Center"/>
+
+    </Grid>
 </ContentPage>
