--- a/Pages/ConsultationPage.xaml
+++ b/Pages/ConsultationPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="iNutri.Pages.ConsultationPage">
-    <StackLayout>
+    <StackLayout HorizontalOptions="Center"
+                 Padding="20"
+                 Spacing="20">
         <Label Text="Select a Date and Time:" />
         <DatePicker x:Name="consultationDate" />
         <TimePicker x:Name="consultationTime" />
