--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -21,7 +21,7 @@
                FontAttributes="Bold"
                HorizontalOptions="Center"/>
 
-        <ImageButton Source="nutritionguide.png" 
+        <ImageButton Source="consultation.png" 
                      Padding="25"
                     Clicked="OnImageButton1Clicked"
                     Grid.Row="1"
@@ -34,7 +34,7 @@
                VerticalOptions="End"
                HorizontalOptions="Center"/>
 
-        <ImageButton Source="consultation.png"
+        <ImageButton Source="nutritionguide.jpg"
                      Padding="25"
                     Clicked="OnImageButton2Clicked"
                     Grid.Row="2"
